--- a/package.json
+++ b/package.json
@@ -1,11 +1,22 @@
 {
+    "private": true,
     "scripts": {
-        "build": "tsc --build",
+        "build": "npx webpack --config=webpack.config.ts --mode=development",
         "format": "npx prettier . --write"
     },
     "devDependencies": {
-        "@types/node": "^22.5.1",
+        "@types/lodash": "^4.17.7",
+        "@types/node": "^22.5.4",
+        "@types/uuid": "^10.0.0",
+        "@types/webpack": "^5.28.5",
         "prettier": "3.3.3",
-        "typescript": "^5.5.4"
+        "ts-loader": "^9.5.1",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.5.4",
+        "webpack": "^5.94.0",
+        "webpack-cli": "^5.1.4"
+    },
+    "dependencies": {
+        "uuid": "^10.0.0"
     }
 }
