--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "private": true,
     "scripts": {
         "build": "npx webpack --config=webpack.config.ts --mode=development",
+        "serve": "npx webpack serve --config=webpack.config.ts --mode=development",
         "format": "npx prettier . --write"
     },
     "devDependencies": {
@@ -9,12 +10,16 @@
         "@types/node": "^22.5.4",
         "@types/uuid": "^10.0.0",
         "@types/webpack": "^5.28.5",
+        "css-loader": "^7.1.2",
+        "html-webpack-plugin": "^5.6.0",
         "prettier": "3.3.3",
+        "style-loader": "^4.0.0",
         "ts-loader": "^9.5.1",
         "ts-node": "^10.9.2",
         "typescript": "^5.5.4",
         "webpack": "^5.94.0",
-        "webpack-cli": "^5.1.4"
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^5.1.0"
     },
     "dependencies": {
         "uuid": "^10.0.0"
