--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "private": true,
+    "type": "module",
     "scripts": {
-        "build": "npx webpack --config=webpack.config.ts --mode=development",
-        "serve": "npx webpack serve --config=webpack.config.ts --mode=development",
+        "build": "npx webpack --config=webpack.config.cjs --mode=development",
+        "serve": "npx webpack serve --config=webpack.config.cjs --mode=development",
         "fmt": "npx prettier . --write"
     },
     "devDependencies": {
@@ -22,6 +23,7 @@
         "webpack-dev-server": "^5.1.0"
     },
     "dependencies": {
-        "uuid": "^10.0.0"
+        "uuid": "^10.0.0",
+        "ws": "8.18.0"
     }
 }
