--- a/package.json
+++ b/package.json
@@ -2,17 +2,19 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "npx webpack --config=webpack.config.cjs --mode=development",
-        "serve": "npx webpack serve --config=webpack.config.cjs --mode=development",
-        "fmt": "npx prettier . --write"
+        "build": "bunx webpack --config=webpack.config.cjs --mode=development",
+        "serve": "bunx webpack serve --config=webpack.config.cjs --mode=development",
+        "fmt": "bunx prettier . --write"
     },
     "devDependencies": {
+        "@types/bun": "^1.1.12",
         "@types/lodash": "^4.17.7",
         "@types/node": "^22.5.4",
         "@types/uuid": "^10.0.0",
         "@types/webpack": "^5.28.5",
         "css-loader": "^7.1.2",
         "html-webpack-plugin": "^5.6.0",
+        "jest": "^29.7.0",
         "prettier": "3.3.3",
         "style-loader": "^4.0.0",
         "ts-loader": "^9.5.1",
